--- a/requirements.txt
+++ b/requirements.txt
@@ -3,15 +3,17 @@ attrs==25.3.0
 certifi==2025.4.26
 cffi==1.17.1
 charset-normalizer==3.4.2
-Django==5.2.1
+Django==5.0.14
 djangorestframework==3.16.0
 exceptiongroup==1.3.0
 h11==0.16.0
 idna==3.10
+mssql-django==1.5
 outcome==1.3.0.post0
 pycparser==2.22
 pyodbc==5.2.0
 PySocks==1.7.1
+pytz==2025.2
 requests==2.32.3
 selenium==4.33.0
 sniffio==1.3.1
